...
        <TextInput
          style={styles.formInput}
          value={season}
          onChangeText={(text) => onInputTextChanged(text)}
          placeholder="Input the F1 season you want..."
          keyboardType="numeric"
          testID="search-season-input"
        />

        <RectButton
          style={styles.formButton}
          onPress={handleNavigateToSeason}
          testID="search-season-button"
        >
          <Text style={styles.formButtonText}>Go</Text>
          <View style={styles.formButtonIcon}>
            <Text>
              <Emoji name="checkered_flag" style={styles.icon} />
            </Text>
...
