...
            {seasonResults.map((race) => (
              <TouchableOpacity
                style={styles.contentCard}
                activeOpacity={0.7}
                onPress={() => handleNavigateToRound(race.round, race.date)}
                key={race.round}
                testID="season-results-card"
              >
                <View style={styles.contentCardHeader}>
                  <Text style={styles.contentCardHeaderTitle}>
                    {race.round}-{race.raceName}
                  </Text>
                  <Icon name="arrow-right" size={18} color="#E54A4A" />
...
