...
              <View
                key={result.position}
                style={[
                  styles.contentCard,
                  getDriverPositionStyles(result.position),
                ]}
                testID="round-results-card"
              >
                <View>
                  <Text style={styles.contentCardHeaderTitle}>
                    {result.position}
                  </Text>
                </View>
...
